[project]
name = "baltic-exchange-scraper"
version = "0.1.0"
description = "Playwright-based scraper for Baltic Exchange TCE earnings data"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "openpyxl>=3.1",
]

[project.scripts]
baltic-scraper = "baltic_scraper.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baltic_scraper"]

# ── uv ────────────────────────────────────────────────────────────────────────
[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "BLE", # flake8-blind-except (allow BLE001 inline with noqa)
    "PLR", # pylint refactor
]
ignore = [
    "N802",    # function names with uppercase OK for Playwright patterns
    "PLR0913", # too many arguments -- CLI entry points legitimately need them
    "PLR0912", # too many branches -- orchestration function
]

[tool.ruff.lint.isort]
known-first-party = ["baltic_scraper"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use literal expected values and broad fixtures.
"tests/**" = ["PLR2004", "PLR0913", "ANN001", "ANN002", "ANN003", "ANN202"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/baltic_scraper"]
branch = true
omit = ["*/conftest.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
